--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://yanpitangui.github.io/blog'
+baseURL = 'https://yanpitangui.com'
 languageCode = 'en-us'
 title = 'Yan Pitangui'
 theme='ananke'
