--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://yanpitangui.com"
+baseURL = "https://yanpitangui.com/"
 languageCode = "en-us"
 title = "Yan Pitangui"
 theme="archie"
