--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/themes/archie-fork"]
-	path = themes/themes/archie-fork
+[submodule "themes/archie-fork"]
+	path = themes/archie-fork
 	url = https://github.com/yanpitangui/archie-theme-hugo.git
