--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ pygmentsstyle = "dracula"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 googleAnalytics = 'G-2YDP77JD9X'
+enableRobotsTXT = true
 
 
 
